@@ -1,3 +1,9 @@
+=== Unreleased
+
+* 1 minor enhancement:
+
+  * New Hoe#licenses attribute and Hoe#license helper method, for declaring gem's license(s).
+
 === 3.0.8 / 2012-08-20
 
 * 1 bug fix:
